fixed blank space on mobile

--- a/src/components/Proficiencies/Proficiencies.scss
+++ b/src/components/Proficiencies/Proficiencies.scss
@@ -53,13 +53,4 @@
   .proficiencies {
     height: 100%;
   }
-
-  .bio {
-    height: 43vh;
-  }
-
-  .bio-text {
-    font-size: 12px;
-    height: 100%
-  }
 }
